--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,19 @@ configurations {
 }
 
 dependencies {
+    compile "javax.servlet:javax.servlet-api:3.1.0"
+    // https://mvnrepository.com/artifact/commons-codec/commons-codec
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
+// https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.4'
     // SpringBoot核心包
     compile("org.springframework.boot:spring-boot-starter-web")
     // redis
     compile("org.springframework.boot:spring-boot-starter-data-redis")
+    // 安全框架
+    compile("org.springframework.boot:spring-boot-starter-security")
+    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
+    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.7.0'
     // 自动mapper生成工具
     compile files('lib/mybatis-generator-plugin-1.4.jar')
     compile('org.mybatis.generator:mybatis-generator-core:1.3.2')
