--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,9 @@ configurations {
 }
 
 dependencies {
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
     compile "javax.servlet:javax.servlet-api:3.1.0"
-    // https://mvnrepository.com/artifact/commons-codec/commons-codec
     compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
-// https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.4'
     // SpringBoot核心包
     compile("org.springframework.boot:spring-boot-starter-web")
@@ -55,5 +54,6 @@ dependencies {
     // 用tomcat运行
     providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
     testCompile("org.springframework.boot:spring-boot-starter-test")
+
 
 }
